precompiles/utils/macro/tests/precompile/compile-fail/fn-modifiers/pre-check-multiple.stderr
error: The pre_check attribute must be the only precompile attribute of a function
  --> tests/precompile/compile-fail/fn-modifiers/pre-check-multiple.rs:23:16
   |
23 |     #[precompile::pre_check]
   |                   ^^^^^^^^^
